fix whitespace

--- a/src/css/components.point.scss
+++ b/src/css/components.point.scss
@@ -13,7 +13,6 @@
   position: relative;
   overflow: hidden;
   display: inline-block;
-  margin-right: -4px;
   width: 16.66667%;
   height: 0;
 
