--- a/src/css/components.quadrant.scss
+++ b/src/css/components.quadrant.scss
@@ -1,12 +1,8 @@
 .c-quadrant {
-  display: inline-block;
+  display: flex;
   width: 45%;
 
-  &:nth-child(1),
-  &:nth-child(2) {
-    display: flex;
-    flex-direction: row-reverse;
-  }
+  &:nth-child(-n+2) { flex-direction: row-reverse; }
 
   &:nth-child(1) { order: 2; }
   &:nth-child(2) { order: 1; }
